# voice-agent-guestflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.full.bak  requirements.txt  vllm_help.txt
backend/: README.md  pyproject.toml
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/agent/: page.tsx
frontend/app/calls/: page.tsx
frontend/app/clients/: page.tsx
frontend/app/components/: theme-toggle.tsx
frontend/app/dashboard/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reservations/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/transcripts/: page.tsx
scripts/: README.md  deploy_runpod.py  doctor.sh  follow_conversation.py  logs_services.sh  restart_all.sh  restart_services.sh  smoke_test_call.sh  start_all.sh  start_backend.sh  start_frontend.sh  start_services.sh  status_services.sh  stop_all.sh  stop_services.sh
src/: main.py
src/agent/: booking_graph.py  orchestrator.py
src/api/: twilio.py
src/api/admin/: live.py
src/config/: settings.py
src/db/: live_store.py  policy_rag.py  sql_stock.py
src/llm/: vllm_client.py
src/stt/: mistral_stt.py
src/tts/: inworld_tts.py
tests/: test_booking_graph.py
