[project]
name = "guestflow-backend"
version = "0.1.0"
description = "GuestFlow backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "pydantic[email]>=2.9.2",
  "pydantic-settings>=2.5.2",
  "langgraph>=0.2.22",
  "langchain-core>=0.3.5",
  "openai>=1.47.1",
  "sqlalchemy>=2.0.35",
  "httpx>=0.27.0",
  "twilio>=9.3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
